--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title> Глейси - каталог </title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;" rel="stylesheet">
+	<!-- <link rel="stylesheet" href="css/style.css">   но файл то есть.. повременим..=)  -->  
   </head>
   <body>
 	<header class="main-header container">
@@ -15,32 +16,34 @@
 		<nav class="main-menu">		<!-- однако Валидатор ругается на такую конструкцию
 										Element li not allowed as child of element nav in this context.
 										(Suppressing further errors from this subtree.)		-->
-			<li>
-				Каталог
-				<ul class="sub-menu">
-					<li><a href="#"> Новинки </a></li>
-					<li><a href="#"> Сливочное </a></li>
-					<li><a href="#"> Щербеты </a></li>
-					<li><a href="#"> Фруктовый лед </a></li>
-					<li><a href="#"> Мелорин </a></li>
-				</ul>
-			</li>
+			<ul>
 				<li>
-					<a href="#"> Доставка и оплата </a>
+					Каталог
+					<ul class="sub-menu">
+						<li><a href="#"> Новинки </a></li>
+						<li><a> Сливочное </a></li>
+						<li><a href="#"> Щербеты </a></li>
+						<li><a href="#"> Фруктовый лед </a></li>
+						<li><a href="#"> Мелорин </a></li>
+					</ul>
 				</li>
-				<li> 
-					<a href="#"> О Компании </a>
-				</li>
+					<li>
+						<a href="#"> Доставка и оплата </a>
+					</li>
+					<li> 
+						<a href="#"> О Компании </a>
+					</li>
+			</ul>
 		</nav>
 		<div class="user-block">
 			<form>
-				<input type="text" name="search" placeholder="поиск">
+				<input type="search" name="search" placeholder="поиск">
 				<input type="submit" value="поиск">
 			</form>
 			<div class="login">
 				<form>
 					<input type="text" name="login" placeholder="логин">
-					<input type="text" name="password" placeholder="пароль">
+					<input type="password" name="password" placeholder="пароль">
 					<a href="#"> 
 						<img src="img/login.png" alt="вход">
 						Вход 
@@ -49,12 +52,12 @@
 			</div>
 			<div class="basket">
 				<a class="login" href="#">
-					<img src="img/basket2.png" alt="корзина">
+					<img src="img/basket2.png" alt="корзина">  <!-- то есть пока как есть, потом добавится через background-image -->
 					2 товара 
 				</a>
 			</div>
 			<p> C 10 до 20, ежедневно </p>
-			<p> 8 812 450-25-25 </p>
+			<p><a href="tel:8 812 450-25-25"> 8 812 450-25-25 </a></p>
 		</div>
 	</header>
 
@@ -153,7 +156,10 @@
 		<article>
 			<a href="#">
 				<img src="img/creamy_ice.png" width="150" height="150" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-				<p> Сливочное с апельсиновым джемом и цитрусовой стружкой </p> 
+				<h2> Сливочное с апельсиновым джемом и цитрусовой стружкой </h2> 
+				<p> 
+					310 р <span> /кг </span>
+				</p>
 			</a> 
 			<a href="#">
 				Быстрый просмотр </a>
@@ -161,21 +167,30 @@
 		<article>
 			<a href="#">
 				<img src="img/coffee_ice.png" width="150" height="150" alt="Сливочно-кофейное с кусочками шоколада">
-				<p> Сливочно-кофейное с кусочками шоколада </p> 
+				<h2> Сливочно-кофейное с кусочками шоколада </h2> 
+				<p> 
+					380 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/strawberry_ice.png" width="150" height="150" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-				<p> Сливочно-клубничное с присыпкой из белого шоколада </p> 
+				<h2> Сливочно-клубничное с присыпкой из белого шоколада </h2> 
+				<p> 
+					355 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/caramel_ice.png" width="150" height="150" alt="Сливочное крем-брюле с карамельной подливкой">
-				<p> Сливочное крем-брюле с карамельной подливкой </p> 
+				<h2> Сливочное крем-брюле с карамельной подливкой </h2> 
+				<p> 
+					415 р <span> /кг </span>
+				</p>
 			</a> 
 			<a href="#"> Быстрый просмотр </a>
 		</article>
@@ -183,28 +198,40 @@
 		<article>
 			<a href="#">
 				<img src="img/cowberry_ice.png" width="150" height="150" alt="Сливочное с брусничным джемом">
-				<p> Сливочное с брусничным джемом </p> 
+				<h2> Сливочное с брусничным джемом </h2> 
+				<p> 
+					325 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/bilberry_ice.png" width="150" height="150" alt="Сливочно-черничное с цельными ягодами черники">
-				<p> Сливочно-черничное с цельными ягодами черники </p> 
+				<h2> Сливочно-черничное с цельными ягодами черники </h2> 
+				<p> 
+					410 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/lemon_ice.png" width="150" height="150" alt="Сливочно-лимонное с карамельной присыпкой">
-				<p> Сливочно-лимонное с карамельной присыпкой </p> 
+				<h2> Сливочно-лимонное с карамельной присыпкой </h2> 
+				<p> 
+					375 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/chocolate_ice.png" width="150" height="150" alt="Сливочное с шоколадной стружкой">
-				<p> Сливочное с шоколадной стружкой </p> 
+				<h2> Сливочное с шоколадной стружкой </h2> 
+				<p> 
+					320 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
@@ -212,28 +239,40 @@
 		<article>
 			<a href="#">
 				<img src="img/vanilla_ice.png" width="150" height="150" alt="Сливочно-ванильное с кусочками шоколада">
-				<p> Сливочно-ванильное с кусочками шоколада </p> 
+				<h2> Сливочно-ванильное с кусочками шоколада </h2> 
+				<p> 
+					440 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/menthol_ice.png" width="150" height="150" alt="Сливочное с ментоловым сиропом">
-				<p> Сливочное с ментоловым сиропом </p> 
+				<h2> Сливочное с ментоловым сиропом </h2> 
+				<p> 
+					435 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/black_chocolate_ice.png" width="150" height="150" alt="Сливочное с кусочками черного шоколада">
-				<p> Сливочное с кусочками черного шоколада </p> 
+				<h2> Сливочное с кусочками черного шоколада </h2> 
+				<p> 
+					355 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 		<article>
 			<a href="#">
 				<img src="img/mint_ice.png" width="150" height="150" alt="Сливочное с мятным сиропом">
-				<p> Сливочное с мятным сиропом </p> 
+				<h2> Сливочное с мятным сиропом </h2> 
+				<p> 
+					420 р <span> /кг </span>
+				</p>
 			</a>
 			<a href="#"> Быстрый просмотр </a>
 		</article>
@@ -257,32 +296,35 @@
 	
 	<footer class="container">
 		<div class="footer-social">
-			<a href="#">
-				<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
-			</a>
-			<a href="#">
-				<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
-			</a>
-			<a href="#">
-				<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
-			</a>
-			<a href="#">
-				<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
-			</a>
+			<ul> 
+				<a href="#">
+					<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
+				</a>
+				<a href="#">
+					<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
+				</a>
+				<a href="#">
+					<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
+				</a>
+				<a href="#">
+					<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
+				</a>
+			</ul>
 		</div>
 		<div class="footer-info">
-			<img src="img/heart.png" alt="серечко">
-			<a href="#"> Для поставщиков </a>
-			<a href="#"> Наши документы </a>
-			<a href="#"> О производстве </a>
-			<a href="#"> Экологические стандарты </a>
+			<ul>
+				<a href="#"> Для поставщиков </a>
+				<a href="#"> Наши документы </a>
+				<a href="#"> О производстве </a>
+				<a href="#"> Экологические стандарты </a>
+			</ul>
 		</div>
 		<div class="footer-logo">
-			<a href="#">
+			<a href="https://htmlacademy.ru/intensive/htmlcss">
 				<img src="img/logo_academy.png" width="108" height="38" alt="html academy"> 
 			</a>
 			<p> Сделано в 
-					<a href="#"> HTML Academy </a> 
+					<a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> 
 				&copy; 2017 
 			</p>
 		</div>
