--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title> Глейси - каталог </title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
 	<!-- <link rel="stylesheet" href="css/style.css">   но файл то есть.. повременим..=)  -->  
   </head>
   <body>
@@ -13,9 +13,7 @@
 				<img src="img/logo.png" alt="GllacyShop" title="GllacyShop" width="154" height="64">
 			</a>
 		</div>
-		<nav class="main-menu">		<!-- однако Валидатор ругается на такую конструкцию
-										Element li not allowed as child of element nav in this context.
-										(Suppressing further errors from this subtree.)		-->
+		<nav class="main-menu">
 			<ul>
 				<li>
 					Каталог
@@ -52,12 +50,11 @@
 			</div>
 			<div class="basket">
 				<a class="login" href="#">
-					<img src="img/basket2.png" alt="корзина">  <!-- то есть пока как есть, потом добавится через background-image -->
 					2 товара 
 				</a>
 			</div>
 			<p> C 10 до 20, ежедневно </p>
-			<p><a href="tel:8 812 450-25-25"> 8 812 450-25-25 </a></p>
+			<p><a href="tel:8812450-25-25"> 8 812 450-25-25 </a></p>
 		</div>
 	</header>
 
@@ -296,27 +293,43 @@
 	
 	<footer class="container">
 		<div class="footer-social">
-			<ul> 
-				<a href="#">
-					<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
-				</a>
-				<a href="#">
-					<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
-				</a>
-				<a href="#">
-					<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
-				</a>
-				<a href="#">
-					<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
-				</a>
+			<ul>
+				<li>
+					<a href="#">
+						<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
+					</a>
+				</li>
 			</ul>
 		</div>
 		<div class="footer-info">
 			<ul>
-				<a href="#"> Для поставщиков </a>
-				<a href="#"> Наши документы </a>
-				<a href="#"> О производстве </a>
-				<a href="#"> Экологические стандарты </a>
+				<li>
+					<a href="#"> Для поставщиков </a>
+				</li>
+				<li>
+					<a href="#"> Наши документы </a>
+				</li>
+				<li>
+					<a href="#"> О производстве </a>
+				</li>
+				<li>
+					<a href="#"> Экологические стандарты </a>
+				</li>
 			</ul>
 		</div>
 		<div class="footer-logo">
