--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<title> Глейси - Главная страница </title>
-		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;" rel="stylesheet">
-		<!-- 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-				<link rel="stylesheet" type="text/css" href="css/style.css"> 		 -->
+		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+		<!-- 	<link rel="stylesheet" href="css/normalize.css">
+				<link rel="stylesheet" href="css/style.css"> 		 -->
 	</head>
 	<body>
 		<header class="main-header container">
@@ -13,37 +13,37 @@
 				<img src="img/logo.png" alt="GllacyShop" title="GllacyShop" width="154" height="64">
 			</div>
 			<nav class="main-menu">
-				<li>
-					<a href="#"> Каталог </a>
-					<ul class="sub-menu">
-						<li><a class="sub-new" href="#"> Новинки </a></li>
-						<li><a href="#"> Сливочное </a></li>
-						<li><a href="#"> Щербеты </a></li>
-						<li><a href="#"> Фруктовый лед </a></li>
-						<li><a href="#"> Мелорин </a></li>
-					</ul>
-				</li>
-				<li>
-					<a href="#"> Доставка и оплата </a>
-				</li>
-				<li> 
-					<a href="#"> О Компании </a>
-				</li>
+				<ul>
+					<li>
+						<a href="#"> Каталог </a>
+						<ul class="sub-menu">
+							<li><a class="sub-new" href="#"> Новинки </a></li>
+							<li><a href="#"> Сливочное </a></li>
+							<li><a href="#"> Щербеты </a></li>
+							<li><a href="#"> Фруктовый лед </a></li>
+							<li><a href="#"> Мелорин </a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="#"> Доставка и оплата </a>
+					</li>
+					<li> 
+						<a href="#"> О Компании </a>
+					</li>
+				</ul>	
 			</nav>
 			<div class="user-block">
 				<form>
 					<input type="text" name="search" placeholder="поиск">
 				</form>
 				<a class="login" href="#">
-					<img src="img/login.png" alt="вход">
 					Вход 
 				</a>
 				<a class="login" href="#"> 
-					<img src="img/basket.png" alt="корзина">
 					Пусто
 				</a>
 				<p> C 10 до 20, ежедневно </p>
-				<p> 8 812 450-25-25 </p>
+				<p><a href="tel:8812450-25-25"> 8 812 450-25-25 </a></p>
 			</div>
 		</header>
 
@@ -145,9 +145,9 @@
 				<div class="user-blog container">
 					<div class="blog">
 						<p> Новое в нашем блоге </p>
-						<p>
+						<h3>
 							<a href="#"> 10 способов сервировки фруктовых щербетов к столу </a>
-						</p>
+						</h3>
 					</div>
 					<div class="subscribe">
 						<p> Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
@@ -165,28 +165,46 @@
 		</main> 
 		
 		<footer class="container">
-			<div class="footer-social">
-				<a href="#">
-					<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
-				</a>
-				<a href="#">
-					<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
-				</a>
-				<a href="#">
-					<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
-				</a>
-				<a href="#">
-					<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
-				</a>
-			</div>
-			<div class="footer-info">
-				<ul>
+		<div class="footer-social">
+			<ul>
+				<li>
+					<a href="#">
+						<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
+					</a>
+				</li>
+			</ul>
+		</div>
+		<div class="footer-info">
+			<ul>
+				<li>
 					<a href="#"> Для поставщиков </a>
+				</li>
+				<li>
 					<a href="#"> Наши документы </a>
+				</li>
+				<li>
 					<a href="#"> О производстве </a>
+				</li>
+				<li>
 					<a href="#"> Экологические стандарты </a>
-				</ul>
-			</div>
+				</li>
+			</ul>
+		</div>
 			<div class="footer-logo">
 			<a href="https://htmlacademy.ru/intensive/htmlcss">
 					<img src="img/logo_academy.png" width="108" height="38" alt="html academy"> 
