--- a/catalog.html
+++ b/catalog.html
@@ -296,22 +296,22 @@
 			<ul>
 				<li>
 					<a href="#">
-						<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
+						<img src="img/twitter.svg" width="38" height="38" alt="twitter"> 
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
+						<img src="img/instagram.svg" width="38" height="38" alt="instagram"> 
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
+						<img src="img/fb.svg" width="38" height="38" alt="facebook"> 
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
+						<img src="img/vk.svg" width="38" height="38" alt="vkontakte"> 
 					</a>
 				</li>
 			</ul>
@@ -334,7 +334,7 @@
 		</div>
 		<div class="footer-logo">
 			<a href="https://htmlacademy.ru/intensive/htmlcss">
-				<img src="img/logo_academy.png" width="108" height="38" alt="html academy"> 
+					<img src="img/logo_htmlacademy.svg" width="108" height="38" alt="html academy"> 
 			</a>
 			<p> Сделано в 
 					<a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> 
