--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<header class="main-header container">
 			<div class="logo">
 				<img src="img/logo.png" alt="GllacyShop" title="GllacyShop" width="154" height="64">
+					<!-- .png меньше весит  или  .svg лучше ?  -->
 			</div>
 			<nav class="main-menu">
 				<ul>
@@ -91,7 +92,7 @@
 			<div class="price container">
 				<article> 
 					<a href="#">
-						<img src="img/creamy_ice.png" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
+						<img src="img/creamy_ice_hit.png" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
 						<h2> Сливочное с апельсиновым джемом и цитрусовой стружкой </h2> 
 						<p> 
 							310 р <span> /кг </span>
@@ -101,7 +102,7 @@
 				</article>
 				<article> 
 					<a href="#">
-						<img src="img/coffee_ice.png" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада"> 
+						<img src="img/coffee_ice_hit.png" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада"> 
 						<h2> Сливочно-кофейное с кусочками шоколада </h2>
 						<p> 
 							380 р <span> /кг </span>
@@ -111,7 +112,7 @@
 				</article>
 				<article>
 					<a href="#">
-						<img src="img/strawberry_ice.png" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада"> 
+						<img src="img/strawberry_ice_hit.png" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада"> 
 						<h2> Сливочно-клубничное с присыпкой из белого шоколада </h2>
 						<p> 
 							355 р <span> /кг </span>
@@ -121,7 +122,7 @@
 				</article>
 				<article> 
 					<a href="#">
-						<img src="img/caramel_ice.png" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой"> 
+						<img src="img/caramel_ice_hit.png" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой"> 
 						<h2> Сливочное крем-брюле с карамельной подливкой </h2>
 						<p> 
 							415 р <span> /кг </span>
@@ -169,22 +170,22 @@
 			<ul>
 				<li>
 					<a href="#">
-						<img src="img/twitter.png" width="38" height="38" alt="twitter"> 
+						<img src="img/twitter.svg" width="38" height="38" alt="twitter"> 
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/instagram.png" width="38" height="38" alt="instagram"> 
+						<img src="img/instagram.svg" width="38" height="38" alt="instagram"> 
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/facebook.png" width="38" height="38" alt="facebook"> 
+						<img src="img/fb.svg" width="38" height="38" alt="facebook"> 
 					</a>
 				</li>
 				<li>
 					<a href="#">
-						<img src="img/vkontakte.png" width="38" height="38" alt="vkontakte"> 
+						<img src="img/vk.svg" width="38" height="38" alt="vkontakte"> 
 					</a>
 				</li>
 			</ul>
@@ -207,7 +208,7 @@
 		</div>
 			<div class="footer-logo">
 			<a href="https://htmlacademy.ru/intensive/htmlcss">
-					<img src="img/logo_academy.png" width="108" height="38" alt="html academy"> 
+					<img src="img/logo_htmlacademy.svg" width="108" height="38" alt="html academy"> 
 				</a>
 				<p> Сделано в 
 					<a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> 
