--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
 	<header class="main-header container">
 		<div class="logo">
 			<a href="index.html">
-				<img src="img/logo.png" alt="GllacyShop" title="GllacyShop" width="154" height="64">
+				<img src="img/logo.svg" alt="GllacyShop" title="GllacyShop" width="154" height="64">
 			</a>
 		</div>
 		<nav class="main-menu">
@@ -152,7 +152,7 @@
 	<div class="price container">
 		<article>
 			<a href="#">
-				<img src="img/creamy_ice.png" width="150" height="150" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+				<img src="img/creamy_ice.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<h2> Сливочное с апельсиновым джемом и цитрусовой стружкой </h2> 
 				<p> 
 					310 р <span> /кг </span>
@@ -163,7 +163,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/coffee_ice.png" width="150" height="150" alt="Сливочно-кофейное с кусочками шоколада">
+				<img src="img/coffee_ice.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 				<h2> Сливочно-кофейное с кусочками шоколада </h2> 
 				<p> 
 					380 р <span> /кг </span>
@@ -173,7 +173,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/strawberry_ice.png" width="150" height="150" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+				<img src="img/strawberry_ice.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 				<h2> Сливочно-клубничное с присыпкой из белого шоколада </h2> 
 				<p> 
 					355 р <span> /кг </span>
@@ -183,7 +183,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/caramel_ice.png" width="150" height="150" alt="Сливочное крем-брюле с карамельной подливкой">
+				<img src="img/caramel_ice.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 				<h2> Сливочное крем-брюле с карамельной подливкой </h2> 
 				<p> 
 					415 р <span> /кг </span>
@@ -194,7 +194,7 @@
 
 		<article>
 			<a href="#">
-				<img src="img/cowberry_ice.png" width="150" height="150" alt="Сливочное с брусничным джемом">
+				<img src="img/cowberry_ice.png" width="267" height="267" alt="Сливочное с брусничным джемом">
 				<h2> Сливочное с брусничным джемом </h2> 
 				<p> 
 					325 р <span> /кг </span>
@@ -204,7 +204,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/bilberry_ice.png" width="150" height="150" alt="Сливочно-черничное с цельными ягодами черники">
+				<img src="img/bilberry_ice.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
 				<h2> Сливочно-черничное с цельными ягодами черники </h2> 
 				<p> 
 					410 р <span> /кг </span>
@@ -214,7 +214,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/lemon_ice.png" width="150" height="150" alt="Сливочно-лимонное с карамельной присыпкой">
+				<img src="img/lemon_ice.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
 				<h2> Сливочно-лимонное с карамельной присыпкой </h2> 
 				<p> 
 					375 р <span> /кг </span>
@@ -224,7 +224,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/chocolate_ice.png" width="150" height="150" alt="Сливочное с шоколадной стружкой">
+				<img src="img/chocolate_ice.png" width="267" height="267" alt="Сливочное с шоколадной стружкой">
 				<h2> Сливочное с шоколадной стружкой </h2> 
 				<p> 
 					320 р <span> /кг </span>
@@ -235,7 +235,7 @@
 		
 		<article>
 			<a href="#">
-				<img src="img/vanilla_ice.png" width="150" height="150" alt="Сливочно-ванильное с кусочками шоколада">
+				<img src="img/vanilla_ice.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
 				<h2> Сливочно-ванильное с кусочками шоколада </h2> 
 				<p> 
 					440 р <span> /кг </span>
@@ -245,7 +245,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/menthol_ice.png" width="150" height="150" alt="Сливочное с ментоловым сиропом">
+				<img src="img/menthol_ice.png" width="267" height="267" alt="Сливочное с ментоловым сиропом">
 				<h2> Сливочное с ментоловым сиропом </h2> 
 				<p> 
 					435 р <span> /кг </span>
@@ -255,7 +255,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/black_chocolate_ice.png" width="150" height="150" alt="Сливочное с кусочками черного шоколада">
+				<img src="img/black_chocolate_ice.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
 				<h2> Сливочное с кусочками черного шоколада </h2> 
 				<p> 
 					355 р <span> /кг </span>
@@ -265,7 +265,7 @@
 		</article>
 		<article>
 			<a href="#">
-				<img src="img/mint_ice.png" width="150" height="150" alt="Сливочное с мятным сиропом">
+				<img src="img/mint_ice.png" width="267" height="267" alt="Сливочное с мятным сиропом">
 				<h2> Сливочное с мятным сиропом </h2> 
 				<p> 
 					420 р <span> /кг </span>
