--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 	<body>
 		<header class="main-header container">
 			<div class="logo">
-				<img src="img/logo.png" alt="GllacyShop" title="GllacyShop" width="154" height="64">
-					<!-- .png меньше весит  или  .svg лучше ?  -->
+				<img src="img/logo.svg" alt="GllacyShop" title="GllacyShop" width="154" height="64">
 			</div>
 			<nav class="main-menu">
 				<ul>
 					<li>
-						<a href="#"> Каталог </a>
+						<a href="catalog.html"> Каталог </a>
+							<!-- Сделай нормальные перекрестные ссылки между макетами (см. Д24)
+								Страницы должны ссылаться друг на друга из главного меню.
+								При этом активный пункт меню должен быть подсвечен в соответствии с файлом styleguide.psd. Также на всех внутренних страницах должна быть ссылка на логотипе, ведущая на главную страницу. Однако на главной странице логотип должен быть без ссылки.
+								- добавил тут ссылку на Каталог, так же со страницы каталог можно вернуться на Главную по логотипу! Или нужно ещё что-то сделать.. нипонятно.. -->
+						
 						<ul class="sub-menu">
 							<li><a class="sub-new" href="#"> Новинки </a></li>
 							<li><a href="#"> Сливочное </a></li>
@@ -92,7 +96,14 @@
 			<div class="price container">
 				<article> 
 					<a href="#">
-						<img src="img/creamy_ice_hit.png" width="200" height="200" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
+						<span class="visually-hidden"> </span>
+						<img src="img/creamy_ice.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
+							<!-- Натуральный размер изображения 267х267. 
+								битва за вес изображения! А в чем смысл тогда ставить большое фото, а потом его обрезать html атрибутами!?
+								по styleguide  не ясно будут ли мороженки увеличиваться при наведении/открытии
+								ну и странно, что на прошлом интенсиве, мне за это по рукам не настучали:) как будто всё вновь..  
+								причина найдена = у меня старый макет, там 200х200  --> 
+						
 						<h2> Сливочное с апельсиновым джемом и цитрусовой стружкой </h2> 
 						<p> 
 							310 р <span> /кг </span>
@@ -102,7 +113,8 @@
 				</article>
 				<article> 
 					<a href="#">
-						<img src="img/coffee_ice_hit.png" width="200" height="200" alt="Сливочно-кофейное с кусочками шоколада"> 
+						<span class="visually-hidden"> </span>
+						<img src="img/coffee_ice.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"> 
 						<h2> Сливочно-кофейное с кусочками шоколада </h2>
 						<p> 
 							380 р <span> /кг </span>
@@ -112,7 +124,8 @@
 				</article>
 				<article>
 					<a href="#">
-						<img src="img/strawberry_ice_hit.png" width="200" height="200" alt="Сливочно-клубничное с присыпкой из белого шоколада"> 
+						<span class="visually-hidden"> </span>
+						<img src="img/strawberry_ice.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"> 
 						<h2> Сливочно-клубничное с присыпкой из белого шоколада </h2>
 						<p> 
 							355 р <span> /кг </span>
@@ -122,7 +135,8 @@
 				</article>
 				<article> 
 					<a href="#">
-						<img src="img/caramel_ice_hit.png" width="200" height="200" alt="Сливочное крем-брюле с карамельной подливкой"> 
+						<span class="visually-hidden"> </span>
+						<img src="img/caramel_ice.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"> 
 						<h2> Сливочное крем-брюле с карамельной подливкой </h2>
 						<p> 
 							415 р <span> /кг </span>
