--- a/index.html
+++ b/index.html
@@ -15,15 +15,10 @@
 			<nav class="main-menu">
 				<ul>
 					<li>
-						<a href="catalog.html"> Каталог </a>
-							<!-- Сделай нормальные перекрестные ссылки между макетами (см. Д24)
-								Страницы должны ссылаться друг на друга из главного меню.
-								При этом активный пункт меню должен быть подсвечен в соответствии с файлом styleguide.psd. Также на всех внутренних страницах должна быть ссылка на логотипе, ведущая на главную страницу. Однако на главной странице логотип должен быть без ссылки.
-								- добавил тут ссылку на Каталог, так же со страницы каталог можно вернуться на Главную по логотипу! Или нужно ещё что-то сделать.. нипонятно.. -->
-						
+						<a href="#"> Каталог </a>
 						<ul class="sub-menu">
 							<li><a class="sub-new" href="#"> Новинки </a></li>
-							<li><a href="#"> Сливочное </a></li>
+							<li><a href="catalog.html"> Сливочное </a></li>
 							<li><a href="#"> Щербеты </a></li>
 							<li><a href="#"> Фруктовый лед </a></li>
 							<li><a href="#"> Мелорин </a></li>
@@ -96,14 +91,8 @@
 			<div class="price container">
 				<article> 
 					<a href="#">
-						<span class="visually-hidden"> </span>
-						<img src="img/creamy_ice.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
-							<!-- Натуральный размер изображения 267х267. 
-								битва за вес изображения! А в чем смысл тогда ставить большое фото, а потом его обрезать html атрибутами!?
-								по styleguide  не ясно будут ли мороженки увеличиваться при наведении/открытии
-								ну и странно, что на прошлом интенсиве, мне за это по рукам не настучали:) как будто всё вновь..  
-								причина найдена = у меня старый макет, там 200х200  --> 
-						
+						<mark class="visually-hidden"> Хит продаж </mark>
+						<img src="img/creamy_ice.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
 						<h2> Сливочное с апельсиновым джемом и цитрусовой стружкой </h2> 
 						<p> 
 							310 р <span> /кг </span>
@@ -113,8 +102,8 @@
 				</article>
 				<article> 
 					<a href="#">
-						<span class="visually-hidden"> </span>
-						<img src="img/coffee_ice.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"> 
+						<mark class="visually-hidden"> Хит продаж </mark>
+						<img src="img/coffee_ice.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"> 
 						<h2> Сливочно-кофейное с кусочками шоколада </h2>
 						<p> 
 							380 р <span> /кг </span>
@@ -124,8 +113,8 @@
 				</article>
 				<article>
 					<a href="#">
-						<span class="visually-hidden"> </span>
-						<img src="img/strawberry_ice.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"> 
+						<mark class="visually-hidden"> Хит продаж </mark>
+						<img src="img/strawberry_ice.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"> 
 						<h2> Сливочно-клубничное с присыпкой из белого шоколада </h2>
 						<p> 
 							355 р <span> /кг </span>
@@ -135,8 +124,8 @@
 				</article>
 				<article> 
 					<a href="#">
-						<span class="visually-hidden"> </span>
-						<img src="img/caramel_ice.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"> 
+						<mark class="visually-hidden"> Хит продаж </mark>
+						<img src="img/caramel_ice.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"> 
 						<h2> Сливочное крем-брюле с карамельной подливкой </h2>
 						<p> 
 							415 р <span> /кг </span>
