--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
 			<ul>
 				<li>
 					Каталог
-					<ul class="sub-menu">
+					<ul class="sub-menu visually-hidden">
 						<li><a href="#"> Новинки </a></li>
 						<li><a> Сливочное </a></li>
 						<li><a href="#"> Щербеты </a></li>
@@ -52,6 +52,22 @@
 				<a class="login" href="#">
 					2 товара 
 				</a>
+				<form action="https://html.ru" method="post" class="visually-hidden">
+					<label>
+						<input type="checkbox" name="creamy-ice">
+						Пломбир с апельсиновым джемом
+						1,5 кг х 200 руб.
+						300 руб.
+					</label> 
+					<label>
+						<input type="checkbox" name="strawberry-ice">
+						Клубничный пломбир с присыпкой из белого шоколада
+						1,5 кг х 300 руб.
+						450 руб.
+					</label> 
+					Итого: 750 руб.
+					<input type="submit" value="Оформить заказ" name="checkout">
+				</form>				
 			</div>
 			<p> C 10 до 20, ежедневно </p>
 			<p><a href="tel:8812450-25-25"> 8 812 450-25-25 </a></p>
