--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 				</ul>	
 			</nav>
 			<div class="user-block">
-				<form class="visually-hidden">
+				<form  action="?" method="get" class="visually-hidden">
 					<input type="text" name="search" placeholder="Что ищем?">
 				</form>
 				<a class="login" href="#">
 					Вход 
 				</a>
-				<form action="https://html.ru" method="post" class="visually-hidden">
+				<form action="https://echo.htmlacademy.ru" method="post" class="visually-hidden">
 					<input type="email" name="email" placeholder="Электронная почта">
 					<input type="password" name="password" placeholder="Пароль">
 					<input type="submit" value="Войти" name="autorization">
@@ -163,7 +163,7 @@
 					<div class="subscribe">
 						<p> Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного,
 							что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =) </p>
-						<form>
+						<form action="https://echo.htmlacademy.ru" method="post">
 							<input type="email" name="e-mail" placeholder="Электронная почта"> 
 							<button> Отправить </button> 
 						</form>
@@ -172,13 +172,13 @@
 				
 				<div class="map">
 					<img src="img/map.jpg" width="900" height="744" alt="Карта, расположения магазина">
-					<form action="https://html.ru" method="post" class="visually-hidden">
+					<form action="https://echo.htmlacademy.ru" method="post" class="visually-hidden">
 						Мы обязательно вам ответим!
 						<input type="text" name="name" placeholder="Как вас зовут?">
 						<input type="email" name="email" placeholder="Ваша почта для ответа?">
 						<textarea id="comment-field" name="comment" rows="10" cols="40" placeholder="Напишите что-нибудь..."></textarea> 
 						<input type="submit" name="feedback" value="Отправить">
-						<input type="submit" name="close" value="Закрыть">
+						<input type="button" name="close" value="Закрыть">
 					</form>	
 				</div>
 		</main> 
