добавил стилевые файлы

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title> Глейси - каталог </title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-	<!-- <link rel="stylesheet" href="css/style.css">   но файл то есть.. повременим..=)  -->  
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 	<header class="main-header container">
@@ -65,7 +66,7 @@
 							<td> 300 руб. </td>
 						</tr>
 						<tr>
-							<td><a href="?remove&productId=666">
+							<td><a href="?remove&productId=667">
 								<span class="visually-hidden">Удалить продукт</span>
 								</a>
 							</td>
