--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title> Глейси - Главная страница </title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
-		<!-- 	<link rel="stylesheet" href="css/normalize.css">
-				<link rel="stylesheet" href="css/style.css"> 		 -->	
+		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header class="main-header container">
@@ -81,7 +81,22 @@
 				</div>
 			  </div>
 			</div>
-
+			<!-- я так понимаю блок со слайдером относится к бонусным заданиям -->
+			<!-- на лекции увидел такой вариант разметки.. как быть? -->
+			<!--
+				<ul class="slides-switches">
+					<li class="slide-radio">
+						<button class="slide-btn">Первый слайд</button>
+					</li>
+					<li class="slide-radio">
+						<button class="slide-btn">Второй слайд</button>
+					</li>
+					<li class="slide-radio">
+						<button class="slide-btn">Третий слайд</button>
+					</li>
+				</ul>
+			-->
+				
 			<div class="select container"> 
 				<div class="sel-raspberry">
 					<p> Малинка даром! </p>
