--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,7 @@
 				</form>
 			</div>
 			<div class="basket">
-				<a class="login" href="#">
+				<a class="basket-link" href="#">
 					2 товара 
 				</a>
 				<table class="visually-hidden">
@@ -367,7 +367,7 @@
 			<a href="https://htmlacademy.ru/intensive/htmlcss">
 					<img src="img/logo_htmlacademy.svg" width="108" height="38" alt="html academy"> 
 			</a>
-			<p> Сделано в 
+				<p class="copyright"> Сделано в 
 					<a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> 
 				&copy; 2017 
 			</p>
