--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 					Пусто
 				</a>
 				<p> C 10 до 20, ежедневно </p>
-				<p><a href="tel:8812450-25-25"> 8 812 450-25-25 </a></p>
+				<p><a href="tel:8812450-25-25" class="phone"> 8 812 450-25-25 </a></p>
 			</div>
 		</header>
 
@@ -81,21 +81,6 @@
 				</div>
 			  </div>
 			</div>
-			<!-- я так понимаю блок со слайдером относится к бонусным заданиям -->
-			<!-- на лекции увидел такой вариант разметки.. как быть? -->
-			<!--
-				<ul class="slides-switches">
-					<li class="slide-radio">
-						<button class="slide-btn">Первый слайд</button>
-					</li>
-					<li class="slide-radio">
-						<button class="slide-btn">Второй слайд</button>
-					</li>
-					<li class="slide-radio">
-						<button class="slide-btn">Третий слайд</button>
-					</li>
-				</ul>
-			-->
 				
 			<div class="select container"> 
 				<div class="sel-raspberry">
@@ -116,8 +101,8 @@
 						<mark class="visually-hidden"> Хит продаж </mark>
 						<img src="img/creamy_ice.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
 						<h2> Сливочное с апельсиновым джемом и цитрусовой стружкой </h2> 
-						<p> 
-							310 р <span> /кг </span>
+						<p class="price-goods"> 
+							310 р <span> /кг </span>  <!-- как померить font-size?-->
 						</p>
 					</a>
 					<a href="#"> Быстрый просмотр </a>
@@ -127,7 +112,7 @@
 						<mark class="visually-hidden"> Хит продаж </mark>
 						<img src="img/coffee_ice.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"> 
 						<h2> Сливочно-кофейное с кусочками шоколада </h2>
-						<p> 
+						<p class="price-goods"> 
 							380 р <span> /кг </span>
 						</p>
 					</a>
@@ -138,7 +123,7 @@
 						<mark class="visually-hidden"> Хит продаж </mark>
 						<img src="img/strawberry_ice.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"> 
 						<h2> Сливочно-клубничное с присыпкой из белого шоколада </h2>
-						<p> 
+						<p class="price-goods"> 
 							355 р <span> /кг </span>
 						</p>
 					</a>
@@ -149,7 +134,7 @@
 						<mark class="visually-hidden"> Хит продаж </mark>
 						<img src="img/caramel_ice.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"> 
 						<h2> Сливочное крем-брюле с карамельной подливкой </h2>
-						<p> 
+						<p class="price-goods"> 
 							415 р <span> /кг </span>
 						</p>
 					</a>
@@ -243,7 +228,7 @@
 			<a href="https://htmlacademy.ru/intensive/htmlcss">
 					<img src="img/logo_htmlacademy.svg" width="108" height="38" alt="html academy"> 
 				</a>
-				<p> Сделано в 
+				<p class="copyright"> Сделано в 
 					<a href="https://htmlacademy.ru/intensive/htmlcss"> HTML Academy </a> 
 					&copy; 2017 
 				</p>
