--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<main>
 			<div class="sliders container">
 				<a href="#">
-					<img class="slide-img" src="img/ice_cream_bar.png" width="900" height="881" alt="Крем-брюле и пломбир с малиновым джемом" title="Мороженое крем-брюле">
+					<img class="slide-img" src="img/ice_cream_bar.png" width="1045" height="881" alt="Крем-брюле и пломбир с малиновым джемом" title="Мороженое крем-брюле">
 				</a>
 			  <input type="radio" id="btn-1" name="toggle" checked>
 			  <input type="radio" id="btn-2" name="toggle">
@@ -102,7 +102,7 @@
 						<img src="img/creamy_ice.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"> 
 						<h2> Сливочное с апельсиновым джемом и цитрусовой стружкой </h2> 
 						<p class="price-goods"> 
-							310 р <span> /кг </span>  <!-- как померить font-size?-->
+							310 р <span> /кг </span>
 						</p>
 					</a>
 					<a href="#"> Быстрый просмотр </a>
@@ -171,7 +171,7 @@
 				</div>
 				
 				<div class="map">
-					<img src="img/map.jpg" width="900" height="744" alt="Карта, расположения магазина">
+					<img src="img/map.jpg" width="1200" height="430" alt="Карта, расположения магазина">
 					<form action="https://echo.htmlacademy.ru" method="post" class="visually-hidden">
 						Мы обязательно вам ответим!
 						<input type="text" name="name" placeholder="Как вас зовут?">
