--- a/catalog.html
+++ b/catalog.html
@@ -123,11 +123,11 @@
 					</div>
 					<div class="price-controls">
 						<p> Цена: 100 руб. - 500 руб. </p>
-						<label for="min-price">
-							от <input id="min-price" class="min-price" type="text" value="100">
+						<label>
+							от <input class="min-price" type="number" value="100">
 						</label>
-						<label for="max-price">
-							до <input id="max-price" class="max-price" type="text" value="500">
+						<label>
+							до <input class="max-price" type="number" value="500">
 						</label>
 					</div>
 				</div>
