--- a/catalog.html
+++ b/catalog.html
@@ -308,21 +308,24 @@
 			<a href="#"> Быстрый просмотр </a>
 		</article>
 
-		<ul class="pagination">	
-			<li> 1 </li>
-			<li>
-				<a href="#"> 2 </a>
-			</li>
-			<li>
-				<a href="#"> 3 </a>
-			</li>
-			<li>
-				<a href="#"> 4 </a>
-			</li>
-			<li>
-				<a href="#"> 5 </a>
-			</li>
-		</ul>
+		<section class="pagination">
+			<h2 class="visually-hidden">Страницы результатов</h2>
+			<ul class="pagination-list">
+				<li> 1 </li>
+				<li>
+					<a href="#"> 2 </a>
+				</li>
+				<li>
+					<a href="#"> 3 </a>
+				</li>
+				<li>
+					<a href="#"> 4 </a>
+				</li>
+				<li>
+					<a href="#"> 5 </a>
+				</li>
+			</ul>
+		</section>
 	</div>
 	
 	<footer class="container">
@@ -351,7 +354,7 @@
 			</ul>
 		</div>
 		<div class="footer-info">
-			<ul>
+			<ul class="info-part">
 				<li>
 					<a href="#"> Для поставщиков </a>
 				</li>
