--- a/index.html
+++ b/index.html
@@ -148,16 +148,12 @@
 
 				<div class="features-block container">
 					<p> Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес </p>
-					<ul>
-					<div class="part">
+					<ul class="features-list">
 						<li> Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий. </li>
 						<li> Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество. </li>
-					</div>
-					<div class="part">
 						<li> Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья. </li>
 						<li> Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
 						который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус. </li>
-					</div>	
 					</ul>
 				</div>
 
